--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@prisma/client": "6.19",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.3",
+		"dayjs": "^1.11.19",
 		"dotenv": "^17.3.1",
 		"mongodb": "^7.1.0",
 		"reflect-metadata": "^0.2.2",
