--- a/package.json
+++ b/package.json
@@ -21,15 +21,23 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^11.0.1",
+		"@nestjs/config": "^4.0.3",
 		"@nestjs/core": "^11.0.1",
+		"@nestjs/jwt": "^11.0.2",
 		"@nestjs/mapped-types": "^2.1.0",
+		"@nestjs/passport": "^11.0.5",
 		"@nestjs/platform-express": "^11.0.1",
 		"@prisma/client": "6.19",
+		"@types/bcrypt": "^6.0.0",
+		"bcrypt": "^6.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.3",
 		"dayjs": "^1.11.19",
 		"dotenv": "^17.3.1",
 		"mongodb": "^7.1.0",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1",
+		"passport-local": "^1.0.0",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1"
 	},
@@ -42,6 +50,8 @@
 		"@types/express": "^5.0.0",
 		"@types/jest": "^30.0.0",
 		"@types/node": "^22.19.11",
+		"@types/passport-jwt": "^4.0.1",
+		"@types/passport-local": "^1.0.38",
 		"@types/supertest": "^6.0.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
